# pipeline.csv.gazprom.infotech

./: .coveragerc  .gitignore  MANIFEST.in  README.md  history.txt  makefile  requirements.txt  setup.cfg
.github/workflows/: pep257.yml  py3.yml
fixtures/: iv.csv
pipeline_csv_gazprom_infotech/: __init__.py  diam.py
tests/: conftest.py
tests/test/: __init__.py  test_diam.py  test_init.py
